# IT-PUF

./: ._LICENSE  ._README.md  ._gitignore  ._pyproject.toml  .gitignore  LICENSE  README.md  gitignore  pyproject.toml
anchors/: ._Llama-3.2-1B-Instruct_anchor.json  ._Qwen2.5-0.5B-Instruct_anchor.json  ._SmolLM2-1.7B-Instruct_anchor.json  ._TinyLlama-1.1B-Chat-v1.0_anchor.json  ._falcon-mamba-7b-instruct_anchor.json  ._gemma-2-2b-it_anchor.json  ._opt-1.3b_anchor.json  Llama-3.2-1B-Instruct_anchor.json  Qwen2.5-0.5B-Instruct_anchor.json  SmolLM2-1.7B-Instruct_anchor.json  TinyLlama-1.1B-Chat-v1.0_anchor.json  falcon-mamba-7b-instruct_anchor.json  gemma-2-2b-it_anchor.json  opt-1.3b_anchor.json
fallrisk_itpuf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
itpuf/: .___init__.py  ._anchor.py  ._cli.py  ._contract.py  __init__.py  anchor.py  cli.py  contract.py
