[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fallrisk-itpuf"
version = "0.1.0"
description = "Biometric identity verification for AI models — challenge-response fingerprinting with cryptographic guarantees."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    {name = "Anthony Ray Coslett", email = "anthony@fallrisk.ai"},
]
keywords = [
    "ai-safety",
    "model-fingerprinting",
    "model-authentication",
    "puf",
    "llm-security",
    "model-identity",
    "ai-compliance",
    "eu-ai-act",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
]

# Core dependency — always needed.
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
# GPU measurement requires torch + transformers.
gpu = [
    "torch>=2.0",
    "transformers>=4.36",
    "accelerate>=0.25",
]
# Everything.
all = [
    "fallrisk-itpuf[gpu]",
]

[project.urls]
Homepage = "https://fallrisk.ai"
Documentation = "https://github.com/fallrisk-ai/itpuf"
Repository = "https://github.com/fallrisk-ai/itpuf"
Issues = "https://github.com/fallrisk-ai/itpuf/issues"
Paper = "https://doi.org/10.5281/zenodo.18719341"

[project.scripts]
itpuf = "itpuf.cli:main"

[tool.setuptools.packages.find]
include = ["itpuf*"]

[tool.setuptools.package-data]
itpuf = ["py.typed"]
